--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>My LIFF app</title>
   <link rel="stylesheet" href="css/style.css" media="all">
 </head>
+
 <body>
   <p id="os"><b>OS:</b> </p>
   <p id="language"><b>Language:</b> </p>
@@ -41,7 +43,7 @@
     var vConsole = new VConsole()
     console.log("Hello World!")
   </script> -->
-
+  <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.12.0/sdk.js"></script>
   <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
   <script>
     function createUniversalLink() {
@@ -80,10 +82,11 @@
       document.getElementById("version").append(liff.getVersion())
       document.getElementById("accessToken").append(liff.getAccessToken())
       document.getElementById("isInClient").append(liff.isInClient())
-
-      if(liff.isInClient()){
+ 
+    
+      if (liff.isInClient()) {
         document.getElementById("btnLogOut").style.display = "none"
-      }else{
+      } else {
         document.getElementById("btnMsg").style.display = "none"
         document.getElementById("btnScanCode").style.display = "none"
         document.getElementById("btnClose").style.display = "none"
@@ -92,8 +95,8 @@
 
     async function main() {
       //alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "1656116756-gm3doKa1" })
-       getEnvironment()
+      await liff.init({ liffId: "1656275758-7aP3E8Zz" })
+      getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
@@ -102,4 +105,5 @@
     main()
   </script>
 </body>
+
 </html>
