--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     async function main() {
       //alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "1656275758-7aP3E8Zz" })
+      await liff.init({ liffId: "1656116756-gm3doKa1" })
       getEnvironment()
       // getUserProfile()
       // getContext()
