--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   <!-- <script>
     var vConsole = new VConsole()
     console.log("Hello World!")
-  </script> -->
+  </script> 
   
      <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.12.0/sdk.js"></script>
   
- 
+ -->
   <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
   <script>
     function createUniversalLink() {
@@ -98,7 +98,7 @@
 
     async function main() {
       //alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "1656116756-gm3doKa1" })
+      await liff.init({ liffId: "1656275758-7aP3E8Zz" })
       getEnvironment()
       // getUserProfile()
       // getContext()
