--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
   <p><a href="liff/path/?param=9">Link to Path</a></p>
 
-  <button id="btnMsg" onclick="sendMsg()">Send Message</button>
+  <button id="btnMsg" onclick="sendMsg()">Send Message...</button>
   <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
   <button onclick="openWindow()">Open Window</button>
   <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
@@ -59,6 +59,7 @@
     }
 
     function closed() {
+      liff.closeWindow()
 
     }
 
@@ -86,6 +87,7 @@
           }
         ])
         alert("Message sent")
+        closed();
       }
     }
 
