--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>My LIFF app</title>
-  <link rel="stylesheet" href="css/style.css" media="all">
+  <!--<link rel="stylesheet" href="css/style.css" media="all">
+  -->
+  <script>
+    document.write('<link rel="stylesheet" href="css/style.css?cache='+ new Date().getTime() + '" media="all">')
+    </script>
 </head>
 
 <body>
@@ -38,12 +42,12 @@
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <button id="btnClose" onclick="closed()">Close</button>
 
-  <!-- <script src="js/vconsole.min.js"></script> -->
-  <!-- <script>
+  <script src="js/vconsole.min.js"></script> 
+  <script>
     var vConsole = new VConsole()
     console.log("Hello World!")
   </script> 
-  -->
+  
   <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.12.0/sdk.js"></script>
 
 
