--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script>
     var vConsole = new VConsole()
     console.log("Hello World!")
-    console.log("status : " + liff.isLoggedIn())
+    
   </script>
 
   <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.12.0/sdk.js"></script>
@@ -104,6 +104,7 @@
       document.getElementById("utouId").append(liff.getContext().utouId)
       document.getElementById("roomId").append(liff.getContext().roomId)
       document.getElementById("groupId").append(liff.getContext().groupId)
+      console.log("status : " + liff.isLoggedIn());
     }
 
     async function getUserProfile() {
