--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+  <p>ok</p>
+  <!--
   <p id="os"><b>OS:</b> </p>
   <p id="language"><b>Language:</b> </p>
   <p id="version"><b>Version:</b> </p>
@@ -45,6 +47,8 @@
   <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <button id="btnClose" onclick="closed()">Close</button>
+  -->
+  
 
   <script src="js/vconsole.min.js"></script>
   <script>
@@ -102,27 +106,34 @@
     }
 
     function getContext() {
-      document.getElementById("type").append(liff.getContext().type)
+   /*   document.getElementById("type").append(liff.getContext().type)
       document.getElementById("viewType").append(liff.getContext().viewType)
       document.getElementById("utouId").append(liff.getContext().utouId)
       document.getElementById("roomId").append(liff.getContext().roomId)
-      document.getElementById("groupId").append(liff.getContext().groupId)
+      document.getElementById("groupId").append(liff.getContext().groupId)*/
       console.log("status : " + liff.isLoggedIn());
     }
 
     async function getUserProfile() {
       const profile = await liff.getProfile()
-      document.getElementById("pictureUrl").src = profile.pictureUrl
+      var lineitem={};
+      lineitem.pictureUrl = profile.pictureUrl;
+      lineitem.lineuserid = profile.userId;
+      lineitem.displayname = profile.displayName;
+      lineitem.statusMessage = profile.statusMessage;
+      lineitem.lineemail = liff.getDecodedIDToken().email;
+      console.log(lineitem);
+    /*  document.getElementById("pictureUrl").src = profile.pictureUrl
       document.getElementById("urlpicture").append(profile.pictureUrl)
       document.getElementById("userId").append(profile.userId)
       document.getElementById("statusMessage").append(profile.statusMessage)
       document.getElementById("displayName").append(profile.displayName)
-      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
+      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)*/
 
     }
 
     function getEnvironment() {
-      document.getElementById("os").append(liff.getOS())
+    /*  document.getElementById("os").append(liff.getOS())
       document.getElementById("language").append(liff.getLanguage())
       document.getElementById("version").append(liff.getVersion())
       document.getElementById("accessToken").append(liff.getAccessToken())
@@ -135,7 +146,7 @@
         document.getElementById("btnMsg").style.display = "none"
         document.getElementById("btnScanCode").style.display = "none"
         document.getElementById("btnClose").style.display = "none"
-      }
+      }*/
     }
 
     async function main() {
