--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     async function main() {
       //alert("LINE Developers x Skooldio")
       liff.ready.then(() => {
-        document.getElementById("isLoggedIn").append(liff.isLoggedIn())
+    //    document.getElementById("isLoggedIn").append(liff.isLoggedIn())
       if (liff.isLoggedIn()) {
         getEnvironment()
         getUserProfile()
